fix overflow on small devices for website field

--- a/what2do2day/static/assets/css/style.css
+++ b/what2do2day/static/assets/css/style.css
@@ -47,6 +47,7 @@ body {
 /*columns */
 .columns, .modal:not(.datetimepicker-wrapper) {
     margin: 0;
+    max-width: 100%;
 }
 
 /* footer */
